src/reporter/pretty/tests/snapshots/conventional_commits_linter__reporter__pretty__tests__test_pretty_print_all_case_2.snap
---
source: src/reporter/pretty/tests/mod.rs
expression: reporting

---
[1;31mCommit Hash[0m - 0000000000000000000000000000000000000000
[1;31mMessage[0m - "refactor(ts support)!: ship yargs.d.ts (#1671)"
	[1;31mX[0m - Commit title does not comply with the Conventional Commits V1.0.0 specification.

[1;31mX[0m - Found 1 separate linting issues across 1 commits.
